--- a/scarabei-gson/build.gradle
+++ b/scarabei-gson/build.gradle
@@ -1,6 +1,6 @@
 sourceCompatibility = 1.6
 
 dependencies {
-    compile "com.github.Scarabei.ScarabeiAPI:scarabei-api:$scarabeiAPILevel"
+    compile "com.github.Scarabei.Scarabei:scarabei-api:$scarabeiAPILevel"
     compile 'com.google.code.gson:gson:2.8.0'
 }
